# plutus-mint-lock-unlock-dapp

./: .gitignore  CHANGELOG.md  HowToUse.md  README.md  cabal.project  cardano-cli-approach.md  env.sh  nft-mint-V2.plutus  plutus-mint-lock-unlock-dapp.cabal
app/: Main.hs
cardano-cli-tx/: complete-tx-lock-mint.sh  final-transaction.sh  full-tx.sh  lock-funds-mint-nft.sh  lock-funds.body  lock-funds.sh  lock-funds.signed  lock-mint-nft.sh  mint-util.sh  ref-lock-script.sh  test-cli.sh  unlock-funds.body  unlock-funds.sh  unlock-funds.signed
dist-newstyle/cache/: compiler  config  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: package.cache  plutus-mint-dapp-0.1.0.0-inplace.conf
dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-a_-69e96f3eceed3ed5.cache  cardano-b_-c0de99f0ccd585cd.cache  cardano-c_-88a67c41a056383c.cache  cardano-c_-e62f2aeae532ef4f.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-n_-17dfc790a23ed210.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  ekg-forwa_-e7958ca478e40f05.cache  ekg-json-ecbacf43151947f5.cache  flat-5d3bff3e9951fc1.cache  goblins-7fe4f5e9bbbd1224.cache  hedgehog-_-d2bdd077e79afffb.cache  hw-aeson-edd2d1004bfbffe3.cache  io-sim-bc8c9d1167408325.cache  iohk-moni_-c7ca6b005d6f76c5.cache  optparse-_-5b3aca9bcb30ab3a.cache  ouroboros_-268d3b2310e5b441.cache  plutus-3b55de0732f6b166.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-fa901c7e00b7f37b.cache  quickchec_-59a1af83b9d68ed6.cache  servant-p_-232829bf471577c2.cache  typed-pro_-e60d659a24a6dc70.cache
jsons/: datum-lock.json  moon.json  moonred.json  moonst.json  new-datum.json  redeemer.json  sha.json  unlock-redeemer.json
src/: LockScript.hs  LockScriptV2.hs  NFTIdent.hs  NewUtil.hs  UtilityToken.hs  Utils.hs  utilitytoken.txt
src/Offchain/: EmulatorLockScript.hs  LockMintWOF.hs  LockScriptWOF.hs  explain.md
test-addresses/: 01.addr  01.skey  01.vkey  nft-payment.addr  nft-payment.skey  nft-payment.vkey  payment.addr  payment.skey  payment.vkey  payment2.addr  payment2.skey  payment2.vkey
testing/property_based/: GamblingStateMachine.hs  PropertyTestingExplained.md  QuickCheckExample.hs  SMCodeBreakDown.md  StateMachines.md  TestGamblingSM.hs
