Cabal-Version:      2.4
Name:               plutus-mint-dapp
Version:            0.1.0.0
Author:             Tasos V
Maintainer:         tasos.valtinos@gmail.com
Build-Type:         Simple
Copyright:          © 2022 Tasos Valtinos
-- License:            Apache-2.0
-- License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     LockScript,
                       UtilityToken,
                       Utils,
                       NFTIdent,
                       NewUtil
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
                     , playground-common
                     , base16-bytestring
                     , cardano-ledger-core
                     , cardano-crypto-class
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable locking-policy
  main-is: Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-mint-dapp
                     , plutus-tx
                     , bytestring
                     , cardano-api
                     , plutus-core
                     , base16-bytestring
                     , aeson
                     , text
                     , cardano-ledger-core
